# QuantumSimulatorHaskell

./: quantum-simulator.cabal
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
dist-newstyle/packagedb/ghc-9.4.8/: Quantum-0.1.0.0-inplace.conf  package.cache
dist-newstyle/packagedb/ghc-9.6.6/: Quantum-0.1.0.0-inplace.conf  package.cache
dist-newstyle/packagedb/ghc-9.6.7/: Quantum-0.1.0.0-inplace.conf  package.cache
quantum-simualtor/: quantum-simulator.cabal
quantum-simualtor/app/: Main.hs
quantum-simualtor/dist-newstyle/cache/: config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
quantum-simualtor/dist-newstyle/packagedb/ghc-9.4.8/: package.cache  quantum-simulator-0.1.0.0-inplace.conf
quantum-simualtor/src/: QuantumSimulator.hs
src/: .ghc.environment.x86_64-linux-9.6.7  QuantumSimulator.hi  QuantumSimulator.hs  gen.hi  gen.hs  gen.txt
