cabal-version:       >=1.10
name:                quantum-simulator
version:             0.1.0.0
build-type:          Simple

executable quantum-simulator
  main-is:             QuantumSimulator.hs
  hs-source-dirs:      src
  default-language:    Haskell2010

  build-depends:       base >=4.7 && <5,
                        colour,
                       random,
                       Chart >= 1.9,
                       Chart-diagrams >= 1.9
