cabal-version:       >=1.10
name:                quantum-simulator
version:             0.1.0.0
build-type:          Simple

library
  exposed-modules:     QuantumSimulator
  hs-source-dirs:      src
  default-language:    Haskell2010
  build-depends:       base >=4.7 && <5,
                       random

executable quantum-simulator
  main-is:             Main.hs
  hs-source-dirs:      app
  default-language:    Haskell2010
  build-depends:       base >=4.7 && <5,
                       random,
                       quantum-simulator